--- a/pocket/关于学习的一些方法.md
+++ b/pocket/关于学习的一些方法.md
@@ -3,10 +3,9 @@
 @(智能向量)
 
 ## 学习一项知识，必须问自己三个重要问题：
-```
 
-1. 它的本质是什么。
-2. 它的第一原则是什么。
-3. 它的知识结构是怎样的。
+* 它的本质是什么。
+* 它的第一原则是什么。
+* 它的知识结构是怎样的。
+
 [出处：](http://mindhacks.cn/2009/03/09/first-principles-of-programming/)
-```
